Update swagger files
