# controllers/profile_controller.go
@@ -6,7 +6,7 @@ import (
 	"app/models"
 	"app/responses"
 	"errors"
-	"fmt"
+	//"fmt"
 	"github.com/couchbase/gocb/v2"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -25,7 +25,7 @@ var collection_name = db.Collection_name
 // @Description  Checks if service is running
 // @Tags         Health Check Controller
 // @Produce      json
-// @Success      200  {array}  time
+// @Success      200  {}  time
 // @Router       /api/v1/health [get]
 func Healthcheck() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -42,7 +42,7 @@ func Healthcheck() gin.HandlerFunc {
 // @Tags         Profile Controller
 // @Produce      json
 // @Param 		 data body models.Profile true  "Creates a document"
-// @Success      200  {array}  responses.ProfileResponse
+// @Success      200  {array} responses.ProfileResponse
 // @Failure      500			"Error while getting examples"
 // @Failure      403			"Forbidden"
 // @Failure 	 404			"Page Not found"
@@ -54,7 +54,7 @@ func InsertProfile() gin.HandlerFunc {
 		if err := c.BindJSON(&data); err != nil {
 			// DO SOMETHING WITH THE ERROR
 			//Error while getting request
-			c.JSON(http.StatusBadRequest, responses.ProfileResponse{Status: http.StatusBadRequest, Message: "Error while getting the request", Data: map[string]interface{}{"profile": err.Error()}})
+			c.JSON(http.StatusBadRequest, responses.ProfileResponse{Status: http.StatusBadRequest, Message: "Error while getting the request", Profile: err.Error()})
 			return
 		}
 
@@ -74,11 +74,10 @@ func InsertProfile() gin.HandlerFunc {
 		profile_key := new_profile.Pid
 		//perform insert operation
 		result, err := col.Insert(profile_key, new_profile, nil)
-		fmt.Println(result)
-		//fmt.Println(new_profile.LastName)
+		_ = result
 		getResult, err := col.Get(profile_key, nil)
 		err = getResult.Content(&getDoc)
-		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Document successfully inserted", Data: map[string]interface{}{"profile": getDoc}})
+		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Document successfully inserted", Profile: getDoc})
 
 	}
 }
@@ -99,7 +98,7 @@ func GetProfile() gin.HandlerFunc {
 		var getDoc models.RequestBody
 		getResult, err := col.Get(Pid, nil)
 		if errors.Is(err, gocb.ErrDocumentNotFound) {
-			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document does not exist", Data: map[string]interface{}{"profile": err}})
+			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document does not exist", Profile: err})
 			return
 		}
 		err = getResult.Content(&getDoc)
@@ -107,7 +106,7 @@ func GetProfile() gin.HandlerFunc {
 			panic(err)
 		}
 
-		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully fetched Document", Data: map[string]interface{}{"profile": getDoc}})
+		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully fetched Document", Profile: getDoc})
 
 	}
 
@@ -129,7 +128,7 @@ func UpdateProfile() gin.HandlerFunc {
 		var data models.RequestBody
 		profile_id := c.Param("id")
 		if err := c.BindJSON(&data); err != nil {
-			c.JSON(http.StatusBadRequest, responses.ProfileResponse{Status: http.StatusBadRequest, Message: "Error while getting the request", Data: map[string]interface{}{"profile": err.Error()}})
+			c.JSON(http.StatusBadRequest, responses.ProfileResponse{Status: http.StatusBadRequest, Message: "Error while getting the request", Profile: err.Error()})
 			return
 
 		}
@@ -142,15 +141,14 @@ func UpdateProfile() gin.HandlerFunc {
 		data.Password = string(hashedPassword)
 
 		_, err := col.Upsert(profile_id, data, nil)
-		fmt.Println()
 		if errors.Is(err, gocb.ErrDocumentNotFound) {
-			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document with the key does not exist", Data: map[string]interface{}{"profile": err.Error()}})
+			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document with the key does not exist", Profile: err.Error()})
 			return
 
 		}
 		getResult, err := col.Get(profile_id, nil)
 		err = getResult.Content(&getDoc)
-		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully Updated the document", Data: map[string]interface{}{"profile": getDoc}})
+		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully Updated the document", Profile: getDoc})
 	}
 
 }
@@ -170,11 +168,11 @@ func DeleteProfile() gin.HandlerFunc {
 		profile_id := c.Param("id")
 		result, err := col.Remove(profile_id, nil)
 		if errors.Is(err, gocb.ErrDocumentNotFound) {
-			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document Not found with the specified key", Data: map[string]interface{}{"profile": err.Error()}})
+			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document Not found with the specified key", Profile: err.Error()})
 			return
 		}
 
-		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully deleted the document", Data: map[string]interface{}{"profile": result}})
+		c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully deleted the document", Profile: result})
 
 	}
 
@@ -197,7 +195,6 @@ func SearchProfile() gin.HandlerFunc {
 		search := c.Query("search")
 		limit := c.Query("limit")
 		skip := c.Query("skip")
-		//fmt.Println(search)
 		if limit == "" {
 			limit = "5"
 		}
@@ -206,26 +203,24 @@ func SearchProfile() gin.HandlerFunc {
 		}
 		var search_query = search
 		var query = "SELECT p.* FROM " + bucket_name + "." + scope_name + "." + collection_name + " p WHERE lower(p.FirstName) LIKE " + "'" + search_query + "%'" + " OR lower(p.LastName) LIKE " + "'" + search_query + "%'" + " LIMIT " + limit + " OFFSET " + skip + ";"
-		fmt.Println(query)
-		//var query ="SELECT p.* FROM user_profile.default.default p WHERE lower(p.FirstName) LIKE 'qw' OR lower(p.LastName) LIKE 'er'"
-		//fmt.Println(query)
-		results, _ := cluster.Query(query, nil)
-		//fmt.Println(results)
+		results, err := cluster.Query(query, nil)
 		var profile interface{}
 		var s []interface{}
+		if results==nil{
+			panic(err)
+		}
 		for results.Next() {
 			err := results.Row(&profile)
 			if err != nil {
 				panic(err)
 			}
 			s = append(s, profile)
-			//fmt.Println(s)
 
 		}
 		if profile != nil {
-			c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully found the  the document", Data: map[string]interface{}{"data": s}})
+			c.JSON(http.StatusOK, responses.ProfileResponse{Status: http.StatusOK, Message: "Successfully found the  the document", Profile: s})
 		} else {
-			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document Not found with the search query specified", Data: map[string]interface{}{"profile": s}})
+			c.JSON(http.StatusInternalServerError, responses.ProfileResponse{Status: http.StatusInternalServerError, Message: "Error, Document Not found with the search query specified", Profile: s})
 		}
 
 	}
