# docs/swagger.json
@@ -31,10 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "type": ""
                         }
                     }
                 }
@@ -57,8 +54,61 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RequestBody"
+                            "$ref": "#/definitions/models.Profile"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/responses.ProfileResponse"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Page Not found"
+                    },
+                    "500": {
+                        "description": "Error while getting examples"
+                    }
+                }
+            }
+        },
+        "/api/v1/profile/profiles": {
+            "get": {
+                "description": "Searches the Document by word",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile Controller"
+                ],
+                "summary": "Searches the Document by word",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search document by word",
+                        "name": "search",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "specify limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "skip document",
+                        "name": "skip",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -141,12 +191,12 @@
                         "required": true
                     },
                     {
-                        "description": "Creates a document",
+                        "description": "Updates document",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.RequestBody"
+                            "$ref": "#/definitions/models.Profile"
                         }
                     }
                 ],
@@ -213,8 +263,12 @@
         }
     },
     "definitions": {
-        "models.RequestBody": {
+        "models.Profile": {
             "type": "object",
+            "required": [
+                "Email",
+                "password"
+            ],
             "properties": {
                 "Email": {
                     "type": "string"
@@ -225,9 +279,6 @@
                 "LastName": {
                     "type": "string"
                 },
-                "Pid": {
-                    "type": "string"
-                },
                 "password": {
                     "type": "string"
                 }
@@ -236,10 +287,7 @@
         "responses.ProfileResponse": {
             "type": "object",
             "properties": {
-                "data": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
+                "data": {},
                 "message": {
                     "type": "string"
                 },
